--- a/deliverables/newton/neutron-fwaas.yaml
+++ b/deliverables/newton/neutron-fwaas.yaml
@@ -37,3 +37,7 @@ releases:
     projects:
       - repo: openstack/neutron-fwaas
         hash: 0f8daa342cdb7c99c3156ac7b460afe9e774de4f
+  - projects:
+      - hash: 7ffb87235c5ce1c0de6264dd87b072c46bd7d034
+        repo: openstack/neutron-fwaas
+    version: 9.0.2
