--- a/deliverables/ocata/neutron-fwaas.yaml
+++ b/deliverables/ocata/neutron-fwaas.yaml
@@ -42,3 +42,10 @@ releases:
     projects:
       - repo: openstack/neutron-fwaas
         hash: 302a63ce4b7307ac9fd1ee71906230058768190c
+  - projects:
+      - hash: 1f76429d87327e1d1d70a7a0211098c76f9f4688
+        repo: openstack/neutron-fwaas
+    version: 10.1.0
+    highlights: |-
+      * ConntrackNetlink driver to delete conntrack entries
+      * Enable to configure conntrack driver
