--- a/deliverables/newton/python-neutronclient.yaml
+++ b/deliverables/newton/python-neutronclient.yaml
@@ -51,3 +51,10 @@ releases:
       * Remove deprecated admin-state-down from lbaas-member-update
       * Add flavor argument to router
       * Add QoS egress minimum bandwidth rule
+  - projects:
+      - hash: c899a2ea3f8175091faf74f8847cb84f340ae820
+        repo: openstack/python-neutronclient
+    version: 6.0.1
+    highlights: |-
+      * Added --enable-snat option for router-gateway-set
+      * Handle keystoneauth exceptions in retry logic
