Cinder stable/ocata 10.0.5 release
Bug fixes.

Change-Id: I18ee392bd5a329445b0c53d4a9aff58dcdf6abc7

--- a/deliverables/ocata/cinder.yaml
+++ b/deliverables/ocata/cinder.yaml
@@ -49,3 +49,7 @@ releases:
     projects:
       - repo: openstack/cinder
         hash: 4c5a29a8638f0ddb03f595516788255680ae13bc
+  - version: 10.0.5
+    projects:
+      - repo: openstack/cinder
+        hash: 78d093b864e46dc847e507342c7b1f7d01233fea
