--- a/deliverables/pike/neutron-fwaas-dashboard.yaml
+++ b/deliverables/pike/neutron-fwaas-dashboard.yaml
@@ -9,5 +9,11 @@ releases:
     projects:
       - repo: openstack/neutron-fwaas-dashboard
         hash: fc62f5074abb734472aa641c26fafe01d2b3dba9
-    highlights: |-
-      * Initial release after split out from horizon
+    highlights: '* Initial release after split out from horizon'
+  - projects:
+      - hash: 1c037287340cc223cd9410de8a8954ce0addadb1
+        repo: openstack/neutron-fwaas-dashboard
+    version: 1.0.0
+branches:
+  - location: 1.0.0
+    name: stable/pike
