newton: release nova 14.0.8
Change-Id: I87700c9e40231c2c53b9d792a1f0c0b6b5f90903

--- a/deliverables/newton/nova.yaml
+++ b/deliverables/newton/nova.yaml
@@ -87,3 +87,9 @@ releases:
           high consumption of memory due to database connection switching.
 
         See the release notes for more details.
+  - version: 14.0.8
+    projects:
+      - repo: openstack/nova
+        hash: bcc88d4cad3d2a86e9e1c841a4afdb5a9d87c0f1
+    highlights: >
+      - Bug fixes.
