Tag Horizon Pike RC2
Change-Id: I73a1ab7035ce19d559ba421fdb81f9f14636ed7e

--- a/deliverables/pike/horizon.yaml
+++ b/deliverables/pike/horizon.yaml
@@ -20,6 +20,10 @@ releases:
     projects:
       - repo: openstack/horizon
         hash: 671bc7aaa36364ae4c6672ef95ec3dfc9a65745e
+  - version: 12.0.0.0rc2
+    projects:
+      - repo: openstack/horizon
+        hash: d8277a49cbec34eb1c6ae68e8c0f838c8c6f9ea0
 branches:
   - location: 12.0.0.0rc1
     name: stable/pike
