--- a/deliverables/pike/tacker-horizon.yaml
+++ b/deliverables/pike/tacker-horizon.yaml
@@ -3,8 +3,15 @@ launchpad: tacker
 release-model: cycle-with-intermediary
 team: tacker
 type: horizon-plugin
+branches:
+  - name: stable/pike
+    location: 0.10.0
 releases:
   - version: 0.9.0
     projects:
       - repo: openstack/tacker-horizon
         hash: 9ccbabaa305dc1c0dea2190807d0d486a3a3e8e0
+  - version: 0.10.0
+    projects:
+      - repo: openstack/tacker-horizon
+        hash: 6bdb8a4f91bf28a639fea5bb38729f8c68d17606
