--- a/deliverables/_independent/storlets.yaml
+++ b/deliverables/_independent/storlets.yaml
@@ -3,9 +3,15 @@ launchpad: storlets
 team: storlets
 type: service
 branches:
+  - name: stable/pike
+    location: 0.5.0
   - name: stable/ocata
     location: 0.4.0
 releases:
+  - version: 0.5.0
+    projects:
+      - repo: openstack/storlets
+        hash: 1ddf35587a66e995cfe8b3800beab1fa8e8ed7fd
   - version: 0.4.0
     projects:
       - repo: openstack/storlets
