--- a/deliverables/pike/murano-dashboard.yaml
+++ b/deliverables/pike/murano-dashboard.yaml
@@ -20,6 +20,10 @@ releases:
     projects:
       - repo: openstack/murano-dashboard
         hash: 80e2babb22f2d3158dec91be1a4d291e52b54598
+  - version: 4.0.0.0rc2
+    projects:
+      - repo: openstack/murano-dashboard
+        hash: c950e248c2dfdc7a040d6984d84ed19c82a04e7d
 branches:
   - location: 4.0.0.0rc1
     name: stable/pike
