--- a/deliverables/pike/murano.yaml
+++ b/deliverables/pike/murano.yaml
@@ -20,6 +20,10 @@ releases:
     projects:
       - repo: openstack/murano
         hash: 16c1d86c1e6a7b099c818b924b52d043b1dc7e09
+  - version: 4.0.0.0rc2
+    projects:
+      - repo: openstack/murano
+        hash: 94ba1def6032fce03b6cc8028dffc65eb383de1d
 branches:
   - location: 4.0.0.0rc1
     name: stable/pike
