--- a/deliverables/pike/ironic.yaml
+++ b/deliverables/pike/ironic.yaml
@@ -20,3 +20,7 @@ releases:
     projects:
       - repo: openstack/ironic
         hash: 16ac17cbb7414254d72a5e791c6ecf7714094277
+  - version: 9.1.0
+    projects:
+      - repo: openstack/ironic
+        hash: 40fa86a5e28816ebf9f0867e46521ffef5f0aae1
