--- a/deliverables/pike/cinder.yaml
+++ b/deliverables/pike/cinder.yaml
@@ -21,6 +21,10 @@ releases:
       - hash: 674db753498c3bd06ca0f24f5927f316987b47d4
         repo: openstack/cinder
     version: 11.0.0.0rc1
+  - projects:
+      - hash: 7524a44ebb13b76cf42adee0bfff4d999f8dfbb5
+        repo: openstack/cinder
+    version: 11.0.0.0rc2
 branches:
   - location: 11.0.0.0rc1
     name: stable/pike
