Neutron projects RC2
Change-Id: Id9c4a542ad366c268823b80550ab385460c5c3cb

--- a/deliverables/pike/networking-bagpipe.yaml
+++ b/deliverables/pike/networking-bagpipe.yaml
@@ -22,6 +22,10 @@ releases:
       - hash: cf335ab3ca32bad46aa8f2c92f7b8ec313fd94c2
         repo: openstack/networking-bagpipe
     version: 7.0.0.0rc1
+  - projects:
+      - hash: 3ca04d04e233dc5a91068437923c2b042512deab
+        repo: openstack/networking-bagpipe
+    version: 7.0.0.0rc2
 branches:
   - location: 7.0.0.0rc1
     name: stable/pike
