--- a/deliverables/pike/networking-bgpvpn.yaml
+++ b/deliverables/pike/networking-bgpvpn.yaml
@@ -22,6 +22,10 @@ releases:
       - hash: de1c30d426cb59323fecccf0fc5ea08a5bf5409d
         repo: openstack/networking-bgpvpn
     version: 7.0.0.0rc1
+  - projects:
+      - hash: e4e089ee1c99c1e9af1a2bf58cfb992d95af240a
+        repo: openstack/networking-bgpvpn
+    version: 7.0.0.0rc2
 branches:
   - location: 7.0.0.0rc1
     name: stable/pike
