--- a/deliverables/pike/networking-midonet.yaml
+++ b/deliverables/pike/networking-midonet.yaml
@@ -22,6 +22,10 @@ releases:
       - hash: d3743f372995eb7b5d103d9206593612fb433490
         repo: openstack/networking-midonet
     version: 5.0.0.0rc1
+  - projects:
+      - hash: f2dbda7a8c5a48acad36452fab3b8874e48d2e5d
+        repo: openstack/networking-midonet
+    version: 5.0.0.0rc2
 branches:
   - location: 5.0.0.0rc1
     name: stable/pike
