--- a/deliverables/pike/networking-odl.yaml
+++ b/deliverables/pike/networking-odl.yaml
@@ -22,6 +22,10 @@ releases:
       - hash: 2e78dcafa2adcdc61bdd9c9a9ca1e493dfe67b45
         repo: openstack/networking-odl
     version: 11.0.0.0rc1
+  - projects:
+      - hash: f2229850aa53834d0d1192646a59ed5bd68d7835
+        repo: openstack/networking-odl
+    version: 11.0.0.0rc2
 branches:
   - location: 11.0.0.0rc1
     name: stable/pike
