--- a/deliverables/pike/networking-ovn.yaml
+++ b/deliverables/pike/networking-ovn.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: b2c4e1bcccbd37d5a9a7806b5d1d56c754614c7a
         repo: openstack/networking-ovn
     version: 3.0.0.0rc1
+  - projects:
+      - hash: c350f88950ddbd510b823bdbc326e1726ea33fb5
+        repo: openstack/networking-ovn
+    version: 3.0.0.0rc2
 branches:
   - location: 3.0.0.0rc1
     name: stable/pike
