--- a/deliverables/pike/neutron-dynamic-routing.yaml
+++ b/deliverables/pike/neutron-dynamic-routing.yaml
@@ -21,6 +21,10 @@ releases:
       - hash: bdd72c6edeefba825747c18d362b6bb21ce4ab0b
         repo: openstack/neutron-dynamic-routing
     version: 11.0.0.0rc1
+  - projects:
+      - hash: 9098d4447581117e857d2f86fb4a0508b5ffbb6a
+        repo: openstack/neutron-dynamic-routing
+    version: 11.0.0.0rc2
 branches:
   - location: 11.0.0.0rc1
     name: stable/pike
