--- a/deliverables/pike/neutron.yaml
+++ b/deliverables/pike/neutron.yaml
@@ -21,6 +21,10 @@ releases:
       - hash: d225b86738a9db56bc643dfe637b1f21393ad27e
         repo: openstack/neutron
     version: 11.0.0.0rc1
+  - projects:
+      - hash: 8498f40c7e9fdd7081bea8dc9cc2a360909012e0
+        repo: openstack/neutron
+    version: 11.0.0.0rc2
 branches:
   - location: 11.0.0.0rc1
     name: stable/pike
