--- a/deliverables/pike/networking-sfc.yaml
+++ b/deliverables/pike/networking-sfc.yaml
@@ -22,6 +22,10 @@ releases:
       - hash: 9fe187798a74c5bc978960ac6e248cc64fd86fe2
         repo: openstack/networking-sfc
     version: 5.0.0.0rc1
+  - projects:
+      - hash: c77eb09fe571fbb8941d9be38e7cdd4831ff2820
+        repo: openstack/networking-sfc
+    version: 5.0.0.0rc2
 branches:
   - location: 5.0.0.0rc1
     name: stable/pike
