--- a/deliverables/pike/neutron-fwaas.yaml
+++ b/deliverables/pike/neutron-fwaas.yaml
@@ -21,6 +21,10 @@ releases:
       - hash: a6b0f95241cf313527a57a50bb4d15755a2dc396
         repo: openstack/neutron-fwaas
     version: 11.0.0.0rc1
+  - projects:
+      - hash: 2c47f7122c6eb96d8eb550fd573f4d87aea0e2ad
+        repo: openstack/neutron-fwaas
+    version: 11.0.0.0rc2
 branches:
   - location: 11.0.0.0rc1
     name: stable/pike
