--- a/deliverables/pike/puppet-gnocchi.yaml
+++ b/deliverables/pike/puppet-gnocchi.yaml
@@ -14,5 +14,12 @@ releases:
     projects:
       - repo: openstack/puppet-gnocchi
         hash: 3ab9386d33ad568cd0721278e52a6ccca504b821
+  - projects:
+      - hash: e960bf0af37891acb78d5a6b28b08254a50c1fe1
+        repo: openstack/puppet-gnocchi
+    version: 11.3.0
 team: 'Puppet OpenStack'
 type: other
+branches:
+  - location: 11.3.0
+    name: stable/pike
