Add a reminder about novaclient versions for queens
I know this is unusual but an artefact of the release/requirements
process means that we need to release 9.2.0 from pike.  So we don't
inadvertently release 9.2.0 from queens add a warning/reminder.

Change-Id: I0fcddd04d68d7417e42eb2aeb296610d7aeb0d34

--- a/deliverables/queens/python-novaclient.yaml
+++ b/deliverables/queens/python-novaclient.yaml
@@ -4,3 +4,5 @@ launchpad: python-novaclient
 release-model: cycle-with-intermediary
 team: nova
 type: library
+# NOTE(tonyb): Due to merging https://review.openstack.org/493187/ on pike the
+#             first releases of novaclient for queens much be >= 9.3.0
