--- a/deliverables/pike/glance.yaml
+++ b/deliverables/pike/glance.yaml
@@ -26,3 +26,7 @@ releases:
     projects:
       - repo: openstack/glance
         hash: 2b54a8053497f2b48c74abd6128e52462178dc34
+  - version: 15.0.0.0rc2
+    projects:
+      - repo: openstack/glance
+        hash: 982016670fe908e5d7026714b115e63b7c31b46b
