--- a/deliverables/pike/ironic-ui.yaml
+++ b/deliverables/pike/ironic-ui.yaml
@@ -14,6 +14,10 @@ releases:
     projects:
       - repo: openstack/ironic-ui
         hash: 7d4f5688d6691e7b015bc6691c1d5df04fd43b48
+  - version: 3.0.1
+    projects:
+      - repo: openstack/ironic-ui
+        hash: ae6d2667a7b5ac00bae036616e1daa2c26971e32
 branches:
   - name: stable/pike
     location: 3.0.0
