--- a/deliverables/pike/python-ironicclient.yaml
+++ b/deliverables/pike/python-ironicclient.yaml
@@ -27,5 +27,9 @@ releases:
       - hash: 835c5d4c57ddb700cc50c2d7ed8eef6b177a15c2
         repo: openstack/python-ironicclient
     version: 1.16.0
+  - projects:
+      - hash: cdff7a0712c3947ff98d6a8d7975c8477f8317ba
+        repo: openstack/python-ironicclient
+    version: 1.17.0
 team: ironic
 type: library
