--- a/deliverables/pike/python-ironic-inspector-client.yaml
+++ b/deliverables/pike/python-ironic-inspector-client.yaml
@@ -15,5 +15,9 @@ releases:
       - hash: 0ccc7674d8d61f28d5c0880caab35c6eff620dc6
         repo: openstack/python-ironic-inspector-client
     version: 2.0.0
+  - projects:
+      - hash: bdcab9f4fe849a45388cd8ed68dded2ac2fa73b5
+        repo: openstack/python-ironic-inspector-client
+    version: 2.1.0
 team: ironic
 type: library
