--- a/deliverables/pike/neutron.yaml
+++ b/deliverables/pike/neutron.yaml
@@ -25,6 +25,10 @@ releases:
       - hash: 8498f40c7e9fdd7081bea8dc9cc2a360909012e0
         repo: openstack/neutron
     version: 11.0.0.0rc2
+  - projects:
+      - hash: 5212c9c563e9470ce9e6abd76bdef22fa652a9b3
+        repo: openstack/neutron
+    version: 11.0.0.0rc3
 branches:
   - location: 11.0.0.0rc1
     name: stable/pike
