pike: release nova 16.0.0.0rc2
Change-Id: I3e610842b2d40e922d57d82556094d1e2c448a1c

--- a/deliverables/pike/nova.yaml
+++ b/deliverables/pike/nova.yaml
@@ -24,3 +24,7 @@ releases:
     projects:
       - repo: openstack/nova
         hash: 4cd6a3a1b473795a63f076c7986d1b48d83af99d
+  - version: 16.0.0.0rc2
+    projects:
+      - repo: openstack/nova
+        hash: 8b162ba21f06272f915070473640d493dd70beec
