Pike release for watcher
Change-Id: Ic3dd0e5ac694ea5e7b0f535ae9861761cd5bb0ab

--- a/deliverables/pike/watcher.yaml
+++ b/deliverables/pike/watcher.yaml
@@ -28,3 +28,8 @@ releases:
       - repo: openstack/watcher
         hash: eaa09a4cfca3a1d4b5d15d1bc2c2955f8d46b403
         tarball-base: python-watcher
+  - version: 1.4.1
+    projects:
+      - repo: openstack/watcher
+        hash: 9d2f8d11ec5bd633af6b9d5b4bb506c68f38bc4d
+        tarball-base: python-watcher
