--- a/deliverables/ocata/openstack-ansible.yaml
+++ b/deliverables/ocata/openstack-ansible.yaml
@@ -1102,3 +1102,79 @@ releases:
         hash: a7d4b0df2e9ed3c2a1414613e96c7c9db0f2db60
       - repo: openstack/openstack-ansible-os_designate
         hash: 2d1d0a75fb30b95588b943cfa3e7c830004999f4
+  - version: 15.1.8
+    projects:
+      - repo: openstack/openstack-ansible
+        hash: 3a217c4a1cf3d5f12cd9a03ae581f52932c2878f
+      - repo: openstack/openstack-ansible-apt_package_pinning
+        hash: d5c0d7e8d21fc1539cc043097e23851296e2dd95
+      - repo: openstack/openstack-ansible-pip_install
+        hash: 56c0a93ca92b47f033322dfde780bb0dd4914474
+      - repo: openstack/openstack-ansible-galera_client
+        hash: 1d3cdcd33c75a668ac3be046ac53fe1842780058
+      - repo: openstack/openstack-ansible-galera_server
+        hash: c6d36689655586971fbd4be8a6cba2f54b5f44b3
+      - repo: openstack/openstack-ansible-ceph_client
+        hash: 029abd28ded1e52300cfd3093060e1fc5e9574fd
+      - repo: openstack/openstack-ansible-haproxy_server
+        hash: 4874ef7e218e0bc29f5ccca3c16f704a85f0c0b0
+      - repo: openstack/openstack-ansible-lxc_container_create
+        hash: 258dad41ced7f9511d4e388470a759f46d9509fa
+      - repo: openstack/openstack-ansible-lxc_hosts
+        hash: 35cb1ffd23b194491cde02312d3066362d9e5c13
+      - repo: openstack/openstack-ansible-memcached_server
+        hash: 5363432f58334823f7e6c6c88617bb908ca48359
+      - repo: openstack/openstack-ansible-openstack_hosts
+        hash: 8a9dd8cf281f5d1199fc3cbaa635dde91b1037a0
+      - repo: openstack/openstack-ansible-os_keystone
+        hash: 4ed06e106a83160d76b56edda09c7ced1caf104a
+      - repo: openstack/openstack-ansible-openstack_openrc
+        hash: dfdf65b3db7c6240fa173a3a62af4e5028023626
+      - repo: openstack/openstack-ansible-os_aodh
+        hash: aebf86ae0dafae3876a6faab7a0c55010c055f53
+      - repo: openstack/openstack-ansible-os_barbican
+        hash: 91c62d5d2815bc53940e0048f7c9b65bd31e1a7d
+      - repo: openstack/openstack-ansible-os_ceilometer
+        hash: 1d709bd6eace68bfd7fb7d1e52df8d5b6f28810b
+      - repo: openstack/openstack-ansible-os_cinder
+        hash: 3e8a5bb467fbef16cc2ea3ac5217b4dd0a0e0a8c
+      - repo: openstack/openstack-ansible-os_glance
+        hash: 802c3dcad5b9f578fdac969e327bfece75509ef2
+      - repo: openstack/openstack-ansible-os_gnocchi
+        hash: 6c3ffedc0e523163042cf167b1077ddc11136b4c
+      - repo: openstack/openstack-ansible-os_heat
+        hash: 87582ad58070ffb964f982749f71253e0f9148c4
+      - repo: openstack/openstack-ansible-os_horizon
+        hash: e4ff13c56a38707e08cfc00b6eb377b2469fb750
+      - repo: openstack/openstack-ansible-os_ironic
+        hash: b217195f8ae7a5a39eba7d633e625b0c3b0c63b1
+      - repo: openstack/openstack-ansible-os_magnum
+        hash: dfb38385242c9e7f8c04b4485d793055f892ee17
+      - repo: openstack/openstack-ansible-os_trove
+        hash: 93913b6af52bbf55d224b1b0b8ce53e3a8c84398
+      - repo: openstack/openstack-ansible-os_neutron
+        hash: e1bb52ff0a67fd34df2c2182c9d37cab88fb4d8e
+      - repo: openstack/openstack-ansible-os_nova
+        hash: 991d3295fc2f8ecb3cfd46f680ceb1816c763291
+      - repo: openstack/openstack-ansible-os_rally
+        hash: 190522159369ddfec4c8df72bb2a3da351cb841d
+      - repo: openstack/openstack-ansible-os_sahara
+        hash: 4a224f899fbbb68be31824a265fabcb92aa873a4
+      - repo: openstack/openstack-ansible-os_swift
+        hash: 84e939a4d09cd510831d0b146a8a0d28c355dd79
+      - repo: openstack/openstack-ansible-os_tempest
+        hash: de52855d1215a96fde4c060725502fd172c3d949
+      - repo: openstack/openstack-ansible-plugins
+        hash: 0436a9de98ba981281390c6a190abef4f376b8a9
+      - repo: openstack/openstack-ansible-rabbitmq_server
+        hash: e944366f98f358d600f79062465a31ee11cecf4b
+      - repo: openstack/openstack-ansible-repo_build
+        hash: ac4a33048e6a8b16249d266e266c9f8c1a3c36a9
+      - repo: openstack/openstack-ansible-repo_server
+        hash: 2c4a2b3ebd9ba4994b86250cf7b789ed8b09a8f6
+      - repo: openstack/openstack-ansible-rsyslog_client
+        hash: 5f5275720d13bd22945348751131c39877b731ab
+      - repo: openstack/openstack-ansible-rsyslog_server
+        hash: a7d4b0df2e9ed3c2a1414613e96c7c9db0f2db60
+      - repo: openstack/openstack-ansible-os_designate
+        hash: 2d1d0a75fb30b95588b943cfa3e7c830004999f4
