--- a/deliverables/pike/magnum.yaml
+++ b/deliverables/pike/magnum.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: afa32e8672a2a846eaeaa2cf9a5f1a238328e3e2
         repo: openstack/magnum
     version: 5.0.0
+  - projects:
+      - hash: fed947d4000119866e66c3dd77463aa8823efb29
+        repo: openstack/magnum
+    version: 5.0.1
