--- a/deliverables/ocata/heat.yaml
+++ b/deliverables/ocata/heat.yaml
@@ -45,3 +45,7 @@ releases:
     projects:
       - repo: openstack/heat
         hash: a91585396be57b0a9b0a3e4eae1be1ea08588f3f
+  - version: 8.0.4
+    projects:
+      - repo: openstack/heat
+        hash: 1e57d98611b661795d2977d00405385dec609dba
