--- a/deliverables/newton/heat.yaml
+++ b/deliverables/newton/heat.yaml
@@ -53,3 +53,7 @@ releases:
     projects:
       - repo: openstack/heat
         hash: c4508361c89d8ebae6ecffa2e0191c5df54d23a8
+  - version: 7.0.6
+    projects:
+      - repo: openstack/heat
+        hash: 54aa019720f9a03292cdff722eadb494276f13f9
