run commands without buffered I/O
A lot of the commands in this repo use zuul-cloner in a
subprocess. Using unbuffered I/O causes the stderr from zuul-cloner to
appear interleaved properly with the stdout from the main command.

Change-Id: I87c2a6f49e9c9f307ebe42d23ee79cd6344573bf
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ passenv=ZUUL_CACHE_DIR
 install_command = pip install -U {opts} {packages}
 setenv =
    VIRTUAL_ENV={envdir}
+   PYTHONUNBUFFERED=1
 basepython = python3
 deps = -r{toxinidir}/test-requirements.txt
 commands =
